dapr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dapr
  namespace: dapr-system
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    gethomepage.dev/description: Distributed Application Runtime
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Services
    gethomepage.dev/icon: si-dapr.png
    gethomepage.dev/name: Dapr
    gethomepage.dev/href: https://dapr.tahr-toad.ts.net
spec:
  defaultBackend:
    service:
      name: dapr-dashboard
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - dapr
